# VulkanProject

./: CMakeLists.txt  README.md
cmake/: AddAssimp.cmake
include/DummyLibrary/include/DummyLibrary/: DummyLibrary.h
include/Logger/include/Logger/: Logger.h
src/: CMakeLists.txt
src/DummyLibrary/: CMakeLists.txt  DummyLibrary.cpp
src/Logger/: CMakeLists.txt  Logger.cpp
src/Main/: main.cpp
src/StringUtils/: CMakeLists.txt
